# kagura-code

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml
src/kagura_code/: __init__.py  __main__.py  cli.py  compression.py  config.py  doctor.py  env.py  health.py  lean.py  litellm_config.py  log_watcher.py  logging.py  models.py  proxy.py  redact.py  session_state.py  signals.py  tool_catalog.py  tool_router.py
src/kagura_code/_vendor/: default_config.toml  litellm_config.tpl
src/kagura_code/middleware/: __init__.py  app.py  proc.py  runner.py
tests/integ/: conftest.py  test_middleware.py  test_middleware_fallback.py  test_proxy_lifecycle.py
tests/unit/: test_cli.py  test_compression.py  test_config.py  test_doctor.py  test_env.py  test_health.py  test_lean.py  test_litellm_config.py  test_log_watcher.py  test_logging.py  test_middleware_proc.py  test_models.py  test_proxy.py  test_redact.py  test_session_state.py  test_signals.py  test_tool_catalog.py  test_tool_router.py
tests/unit/fixtures/: anthropic_messages_request.json
