[project]
name = "kagura-code"
version = "0.1.0a1"
description = "Run Claude Code CLI against non-Anthropic LLM backends (Ollama Cloud, OpenAI-compatible, ...)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "JFK", email = "fumikazu.kiyota@gmail.com" }]
keywords = ["claude-code", "ollama", "litellm", "llm", "cli", "proxy", "kagura"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Environment :: Console",
]
dependencies = [
  "typer>=0.12,<1",
  "httpx>=0.27,<1",
  "litellm[proxy]>=1.83.0,<2",
  "jinja2>=3.1,<4",
  "rich>=13,<14",
  "fastapi>=0.110,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23.8,<1",
  "pytest-httpserver>=1.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pip-audit>=2.7",
  "pyyaml>=6,<7",
]

[project.scripts]
kagura-code = "kagura_code.cli:app"

[project.urls]
Homepage = "https://github.com/kagura-ai/kagura-code"
Issues = "https://github.com/kagura-ai/kagura-code/issues"
Changelog = "https://github.com/kagura-ai/kagura-code/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kagura_code"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
  "e2e: end-to-end tests requiring real backend (opt-in via KAGURA_CODE_RUN_E2E=1)",
  "asyncio: async tests run via pytest-asyncio",
]
asyncio_mode = "strict"

[dependency-groups]
dev = [
  "pytest-asyncio>=0.23.8,<1",
  "pytest-cov>=5,<8",
  "pytest-httpserver>=1.1.5",
  "pyyaml>=6,<7",
  "types-PyYAML>=6,<7",
]
